fixed overflow in exercizer perform view

--- a/css/_exercizer.scss
+++ b/css/_exercizer.scss
@@ -13,7 +13,9 @@
         margin: 8px;
         border-radius: 3px;
         box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
-        overflow: hidden;
+        img{
+            border-radius: 3px;
+        }
         &.error::after{
             content: " ";
             display: block;
@@ -44,17 +46,19 @@
             left: 0;
             width: 100%;
             font-size: 14px;
-            padding-left: 5px;
+            padding-left: 11px;
             background: rgba(0,0,0,0.5);
             height: 35px;
             line-height: 35px;
             color: #fff;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
             i{
                 padding-right: 3px;
                 margin-top: 1px;
             }
             &:hover{
-
+                color: $accent;
             }
         }
     }
@@ -66,8 +70,13 @@
         border-radius: 5px;
         margin-top: 30px;
         margin-bottom: 30px;
-        
+        position: relative;
         overflow: visible;
+
+        article{
+            background: transparent;
+            padding: 0;
+        }
 
         .image-container{
             display: flex;
@@ -92,9 +101,12 @@
         ul{
             padding: 0;
             list-style-type: none;
+            flex-wrap: wrap;
+            justify-content: center;
+            display: flex;
             li{
                 background: #fff;
-                margin: 3px;
+                margin: 5px;
                 box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
                 padding: 8px;
                 color: #666;
